--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <h3>Todo List App</h3>
                         <p>
                             Introducing my meticulously crafted todo list app: Your ultimate tool for staying organized and productive. Seamlessly manage tasks, set priorities, and track your progress with an intuitive interface designed to simplify your day. Elevate your efficiency with this app that combines user-friendly functionality with a sleek, modern design.</p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://weak-teal-seal-hose.cyclic.app" target = "_blank" ><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
