--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <h3>Netflix Clone</h3>
                         <p>
                             Step into a world of endless entertainment with our remarkable Netflix clone app! Immerse yourself in a vast library of movies, TV shows, and original content. With a seamless and intuitive design, personalized recommendations, and multi-device sync, our app offers the ultimate streaming experience</p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://jainthakhil.github.io/netflix-clone/" target = "_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
