--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <h3>Weather App</h3>
                         <p>
                             Experience weather like never before with my innovative weather app. Stay informed about forecasts, real-time conditions, and more, all presented through a beautifully designed interface. Whether planning your day or traveling, this app brings you accurate weather data wrapped in a user-friendly design that's a joy to interact with.</p>
-                        <a href="jainthakhil.infinityfreeapp.com" target="_blank" ><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="#" target="_blank" ><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
