--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     </div>
                     <div class="tab-titles">
                         <p id = "tab" class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                        <p id = "tab" class="tab-links active-link" onclick="opentab('experience')">Experience</p>
-                        <p id = "tab" class="tab-links active-link" onclick="opentab('education')">Education</p>
+                        <p id = "tab" class="tab-links " onclick="opentab('experience')">Experience</p>
+                        <p id = "tab" class="tab-links " onclick="opentab('education')">Education</p>
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
