--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="tab-contents" id="education">
                         <ul>
                             <li><span>2025 - Ongoing </span><br>BTech from MIT Meerut, CGPA (7.02)</li>
-                            <li><span>2020 - 21</span><br>Internediate with 85%</li>
+                            <li><span>2020 - 21</span><br>Intermediate with 85%</li>
                             <li><span>2018 - 2019</span><br>Highschool with 89%<br></li>
                         </ul>
                     </div>
